--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -18,6 +18,7 @@
         .navbar-brand {
             padding-left: 20px;
             font-size: 50px;
+            line-height: 1;
         }
         .nav{
             padding-right: 50px;
@@ -39,7 +40,7 @@
         background-color:#737373 ;
         top: 10px;
         width: 95%;
-        height: 50px;
+        height: 60px;
         left: 0;
         right: 0;
         margin-left: auto;
@@ -50,7 +51,12 @@
         .navbar-brand {
             padding-left: 20px;
             font-size: 20px;
+
+            img {
+                width: 50px;
+            }
         }
+
         .nav{
             padding-right: 50px;
         }
