--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -14,7 +14,7 @@
         border-bottom-left-radius: 100px;
         border-top-right-radius: 100px;
         border-bottom-right-radius: 100px;
-        
+
         .navbar-brand {
             padding-left: 20px;
             font-size: 50px;
@@ -27,7 +27,7 @@
         .nav-item a {
             text-transform: uppercase;
         }
-    
+
         a {
             color: white;
             text-decoration: none;
@@ -47,7 +47,8 @@
         margin-right: auto;
         z-index: 2;
         position: fixed;
-        
+        padding: 0;
+
         .navbar-brand {
             padding-left: 20px;
             font-size: 20px;
@@ -60,7 +61,7 @@
         .nav{
             padding-right: 50px;
         }
-    
+
         a {
             color: white;
             text-decoration: none;
@@ -108,7 +109,7 @@
             -o-transform-origin: left center;
             transform-origin: left center;
         }
-            
+
         .animated-icon3 span:nth-child(2) {
             top: 10px;
             -webkit-transform-origin: left center;
@@ -116,7 +117,7 @@
             -o-transform-origin: left center;
             transform-origin: left center;
         }
-            
+
         .animated-icon3 span:nth-child(3) {
             top: 20px;
             -webkit-transform-origin: left center;
@@ -124,7 +125,7 @@
             -o-transform-origin: left center;
             transform-origin: left center;
         }
-            
+
         .animated-icon3.open span:nth-child(1) {
             -webkit-transform: rotate(45deg);
             -moz-transform: rotate(45deg);
@@ -133,12 +134,12 @@
             top: 0px;
             left: 8px;
         }
-            
+
         .animated-icon3.open span:nth-child(2) {
             width: 0%;
             opacity: 0;
         }
-            
+
         .animated-icon3.open span:nth-child(3) {
             -webkit-transform: rotate(-45deg);
             -moz-transform: rotate(-45deg);
@@ -157,7 +158,7 @@
     .nav2 {
         display: none;
     }
-    
+
 }
 
 @media (max-width: 700px){
